--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  <h1>My is not First Heading</h1>
-  <p>My first paragraph.</p>
+  <h1>This is not my First Heading</h1>
+  <p>This is not my first paragraph.</p>
 </body>
 </html>
